some language fixes for thunderbird gd

--- a/gd/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/gd/mail/chrome/messenger/addressbook/addressBook.properties
@@ -79,7 +79,7 @@ propertyListName=Ainm na liosta
 propertySecondaryEmail=Post-dealain eile
 propertyScreenName=Ainm-sgrìn
 propertyNickname=Am far-ainm
-propertyDisplayName=An t-ainm-taisbeanaidh
+propertyDisplayName=Ainm-taisbeanaidh
 propertyWork=Obair
 propertyHome=Dachaigh
 propertyFax=Facs
