--- a/gd/mail/chrome/messenger/messenger.properties
+++ b/gd/mail/chrome/messenger/messenger.properties
@@ -86,7 +86,7 @@ folderCreationFailed=Cha do ghabh am pasgan a chruthachadh a chionn 's gu bheil 
 
 compactingFolder=A' dùmhlachadh a' phasgain %S…
 doneCompacting=Deiseil leis an dùmhlachadh
-autoCompactAllFoldersTitle=Dùmhlaich pasgain
+autoCompactAllFoldersTitle=Dùmhlaich na pasgain
 autoCompactAllFolders=A bheil thu airson a h-uile pasgan ionadail is far loidhne a dhùmhlachadh gus àite air an diosg a chaomhnadh?
 autoCompactAlwaysAskCheckbox=Faighnich dhìom an-còmhnaidh mus dùmhlaichear pasgain leis fhèin
 compactNowButton=Dùmhlaich a&n-dràsta
